# embedded-rust-embassy

./: Cargo.toml  LICENSE  README.md  memory.x  runner.sh
.cargo/: config.toml
src/: main.rs  sensor.rs
